@@ -7,6 +7,8 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
+
+* [2017-10-04] DKG-tools: changed default TCP/IP port range start to 55000
 * [2017-10-01] Bugfix: VTMF checking in dkg-decrypt due to FIPS domain parameters
 * [2017-10-01] Bugfix: type casting inside snprintf() of hash function g()
 * [2017-09-05] DKG-tools: fixes upper limit of t-resilience by option "-t"
